--- a/cooking_blog/requirements.txt
+++ b/cooking_blog/requirements.txt
@@ -1,4 +1,13 @@
-virtualenv==20.35.4
-Django==6.0
-pillow==12.0.0
+asgiref==3.11.0
+beautifulsoup4==4.14.3
+distlib==0.4.0
+Django==4.2.27
+django-bootstrap-v5==1.0.11
+filelock==3.20.0
 mysqlclient==2.2.7
+pillow==12.0.0
+platformdirs==4.5.1
+soupsieve==2.8
+sqlparse==0.5.4
+typing_extensions==4.15.0
+tzdata==2025.2  
